--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@react-navigation/bottom-tabs": "^6.4.3",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/stack": "^6.3.7",
+    "@types/i18n": "^0.13.6",
+    "@types/react-i18next": "^8.1.0",
+    "@types/react-native-i18n": "^2.0.0",
     "@types/react-native-vector-icons": "^6.4.12",
     "axios": "^1.2.0",
     "date-fns": "^2.29.3",
@@ -27,20 +30,26 @@
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
+    "i18next": "^22.4.6",
+    "i18next-browser-languagedetector": "^7.0.1",
     "lodash": "^4.17.21",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-i18next": "^12.1.1",
     "react-native": "0.70.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-floating-label-input": "^1.4.2",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-i18n": "^2.0.15",
+    "react-native-localization": "^2.3.1",
+    "react-native-localize": "^2.2.4",
     "react-native-reanimated": "~2.12.0",
+    "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-query": "^3.39.2",
-    "yup": "^0.32.11",
-    "react-native-svg": "13.4.0"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
