--- a/app.json
+++ b/app.json
@@ -4,8 +4,7 @@
     "slug": "Finanse_Manager_Native",
     "version": "1.0.0",
     "extra": {
-      "REGISTER_URL": "registerURL",
-      "LOGIN_URL": "loginURL",
+      "BASE_URL": "https://ac7e5a87-9685-4ca1-941a-1b5111f9cd7e.mock.pstmn.io",
       "INFLATION_API_URL": "https://api.api-ninjas.com/v1/inflation?country=",
       "CONVERT_CURRENCY_API_URL": "https://api.api-ninjas.com/v1/convertcurrency?",
       "INCOME_URL": "incomeURL",
